Body font size changed and contrast of links corrected

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,8 +1,9 @@
 
 body {
-  font-family: 'Merriweather', serif;
+  font-family:'Lato', sans-serif;
   margin: 0;
   text-align: center;
+  font-size: 1.25rem;
 
 }
 
@@ -57,7 +58,7 @@ h3 {
 }
 
 a {
-  color: #11999E;
+  color: #245d5f;
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
   text-decoration: none;
